# smart-leds-fx

./: .gdbinit  Cargo.toml  README.adoc  openocd.cfg
.cargo/: config
boards/: .gitignore
boards/circuit-playground-bluefruit/: Cargo.toml  Embed.toml  README.adoc
boards/circuit-playground-bluefruit/.cargo/: config.toml
boards/circuit-playground-bluefruit/examples/: soft-blink-onboard.rs
boards/circuit-playground-express/: Cargo.toml
boards/circuit_playground_bluefruit/: Cargo.toml  README.adoc
boards/circuit_playground_bluefruit/examples/: soft-blink-onboard.rs
boards/circuit_playground_express/: Cargo.toml  Embed.toml  README.adoc  rust-toolchain.toml
boards/circuit_playground_express/.cargo/: config.toml
boards/circuit_playground_express/examples/: soft-blink-onboard.rs
boards/esp32_c3_devkitc_02/: Cargo.toml  README.adoc
boards/esp32_c3_devkitc_02/.cargo/: config.toml
boards/esp32_c3_devkitc_02/examples/: rgbw-neopixel-stick-high-low-soft-blink.rs  rgbw-neopixel-strand-high-low-soft-blink.rs  rgbw-neopixel-strand-white.rs
boards/feather_m4_express/: Cargo.toml  README.adoc
boards/feather_m4_express/.cargo/: config.toml
boards/feather_m4_express/examples/: christmas-soft-blink-prop-maker-featherwing-neopixel-strip.rs  soft-blink-onboard.rs  soft-blink-prop-maker-featherwing-neopixel-strip.rs
boards/feather_m4_express/src/: main.rs
boards/ft232h/: Cargo.toml  README.adoc
boards/ft232h/examples/: soft-blink-neopixel-strip.rs  soft-blink-rgbw-neopixel-stick.rs
boards/longan-nano/: Cargo.toml  Embed.toml  GD32VF1_Series.yaml  README.adoc  openocd.cfg
boards/longan-nano/.cargo/: config.toml
boards/longan-nano/examples/: rgbw-neopixel-stick-soft-blink.rs
boards/longan_nano/: Cargo.toml  README.adoc  rust-toolchain.toml
boards/longan_nano/.cargo/: config.toml
boards/longan_nano/examples/: rgb-neopixel-triple-ring-board-soft-blink.rs  rgbw-neopixel-stick-high-low-soft-blink.rs  rgbw-neopixel-stick-soft-blink.rs  soft-blink-neopixel-strip.rs
boards/microbit-v2/: Cargo.toml  Embed.toml  README.adoc  openocd.cfg
boards/microbit-v2/.cargo/: config
boards/microbit-v2/examples/: soft-blink-neopixel-strip.rs
boards/microbit_v2/: Cargo.toml  Embed.toml  README.adoc
boards/microbit_v2/examples/: soft-blink-neopixel-strip.rs
boards/qt_py_rp2040/: Cargo.toml  README.adoc
boards/qt_py_rp2040/.cargo/: config.toml
boards/qt_py_rp2040/examples/: rgb-neopixel-strand-high-lowsoft-blink.rs
boards/raspberry-pi-pico/: Cargo.toml  README.adoc
boards/raspberry_pi_pico/: Cargo.toml  README.adoc
boards/raspberry_pi_pico/examples/: rgbw-neopixel-stick-soft-blink.rs  rgbw-neopixel-strand-candy-cane.rs
smart-leds-fx/: Cargo.toml
smart-leds-fx/src/: colors.rs
src/: iterators.rs  lib.rs  main.rs  spin_timer.rs
