[package]
authors = ["Jordan Williams <jordan@jwillikers.com>"]
description = "A soft blink effect for the onboard Neopixel on the Adafruit Feather M4 Express"
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "led", "neopixel"]
license = "GPLv3"
name = "neopixel_soft_blink"
readme = "README.adoc"
repository = "https://github.com/jwillikers/barometric-pressure-sensor"
version = "0.1.0"

[dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
cortex-m = "0.6"
cortex-m-rt = "0.6.12"
embedded-hal = "0.2.3"
nb = "0.1"
smart-leds = "0.3.0"
ws2812-timer-delay = "0.3.0"

[dependencies.feather_m4]
features = ["rt", "unproven", "usb"]
git = "https://github.com/atsamd-rs/atsamd"

[dependencies.num-traits]
version = "0.2"
default-features = false

[profile]
[profile.dev]
codegen-units = 1
debug = true
lto = true

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
