[package]
authors = ["Jordan Williams <jordan@jwillikers.com>"]
description = "A soft blink effect for the onboard Neopixel on the Longan Nano"
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "led", "neopixel"]
license = "GPLv3"
name = "neopixel_soft_blink"
readme = "README.adoc"
repository = "https://github.com/jwillikers/neopixel-soft-blink"
version = "0.1.0"

[dependencies]
panic-halt = "0.2"
riscv-rt = "0.8.0"
embedded-hal = "0.2.3"
nb = "0.1"
smart-leds = "0.3.0"

[dependencies.ws2812-spi]
#features = ["mosi_idle_high"]
version = "0.4.0"

[dependencies.longan-nano]
features = ["lcd"]
git = "https://github.com/riscv-rust/longan-nano.git"

[dependencies.num-traits]
version = "0.2"
default-features = false

[profile]
[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
