[package]
authors = ["Jordan Williams <jordan@jwillikers.com>"]
description = "A soft blink effect for the onboard Neopixel on the Longan Nano"
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "led", "neopixel"]
license = "GPLv3"
name = "neopixel_soft_blink"
readme = "README.adoc"
repository = "https://github.com/jwillikers/neopixel-soft-blink"
version = "0.1.0"

[dependencies]
#cortex-m = "0.7.3"
cortex-m-rt = "0.6.2"
defmt = "0.2.0"
embedded-time = "0.12.0"
panic-halt = "0.2"
microbit-v2 = "0.11.0"
nb = "0.1"
smart-leds = "0.3.0"

[dependencies.ws2812-spi]
version = "0.4.0"

[dependencies.num-traits]
version = "0.2"
default-features = false

[profile]
[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
