[package]
name = "circuit-playground-express-example"
version = "0.1.0"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
description = "Examples of lighting effects for Adafruit's Circuit Playground Express"
keywords = ["dotstar", "embedded", "fx", "led", "microbit", "neopixel", "no-std", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
embedded-time = "0.12.0"
nb = "0.1"
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
smart-leds = "0.3.0"
ws2812-timer-delay = "0.3.0"

[dependencies.circuit_playground_express]
version = "0.9.0"
features = ["unproven", "use_semihosting"]

[dependencies.smart-leds-fx]
path = "../.."
version = "0.1.0"

[profile]
[profile.dev]
debug = true
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
