[package]
name = "circuit_playground_bluefruit_example"
version = "0.1.0"
description = "Examples of lighting effects for the Circuit Playground Bluefruit"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
keywords = ["dotstar", "embedded", "fx", "led", "neopixel", "no-std", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
embedded-hal = "0.2.3"
embedded-time = "0.12.0"
nrf52840-hal = "0.13.0"
nb = "0.1"
panic-halt = "0.2.0"
#panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
#rtt-target = {version = "0.3.1", features = ["cortex-m"]}
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
# todo Use features to configure the driver included?
ws2812-timer-delay = "0.3.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.smart-leds-fx]
path = "../.."
version = "0.1.0"

[profile]
[profile.dev]
debug = true
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
