[package]
name = "circuit_playground_express_example"
version = "0.1.0"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
description = "Examples of lighting effects for Adafruit's Circuit Playground Express"
keywords = ["dotstar", "embedded", "fx", "led", "microbit", "neopixel", "no-std", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"

[dependencies]
cortex-m = "0.7.3"
embedded-time = "0.12.0"
nb = "0.1"
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
smart-leds = "0.3.0"

[dependencies.ws2812-timer-delay]
features = ["slow"]
version = "0.3.0"

[dependencies.circuit_playground_express]
git = "https://github.com/atsamd-rs/atsamd"
features = ["rt", "unproven", "use_semihosting"]

[dependencies.smart-leds-fx]
path = "../../smart-leds-fx"
version = "0.1.0"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
