[package]
name = "esp32_c3_devkitc_02"
version = "0.1.0"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
description = "Examples of lighting effects for ESP32-C3-DevKitC-02"
keywords = ["dotstar", "embedded", "esp", "esp32", "esp32c3", "fx", "led", "m4", "neopixel", "no-std", "riscv", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
embassy-time = { version = "0.1.0", features = ["nightly"], optional = true }
esp-backtrace = { version = "0.2.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = ["ufmt", "mcu-boot"] }
riscv-rt = "0.10.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[dependencies.smart-leds-fx]
path = "../../smart-leds-fx"
version = "0.1.0"

[profile.dev]
opt-level = 1
