[package]
name = "ft232h_examples"
version = "0.1.0"
description = "Lighting effects for LED's using the Adafruit FT232H Breakout"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
edition = "2018"
keywords = ["adafruit", "dotstar", "embedded", "ft232h", "ftdi", "fx", "led", "neopixel", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"

[dependencies]
#embedded-hal = "1.0.0-alpha.5"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

#[dependencies.ftd2xx-embedded-hal]
[dependencies.ftdi-embedded-hal]
git = "https://github.com/ftdi-rs/ftdi-embedded-hal/"
#version = "0.9.1"
features = ["static"]

[dependencies.smart-leds-fx]
path = "../../smart-leds-fx"
version = "0.1.0"
#
#[profile]
#[profile.dev]
#codegen-units = 1
#debug = true
#lto = true
#opt-level = 3
#
#[profile.release]
#codegen-units = 1
#debug = true
#lto = true
#opt-level = 3

