[package]
name = "longan_nano_example"
version = "0.1.0"
description = "A soft blink effect for the onboard Neopixel on the Longan Nano"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
edition = "2018"
keywords = ["dotstar", "embedded", "fx", "led", "neopixel", "no-std", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"

[dependencies]
embedded-hal = "0.2.3"
embedded-time = "0.12.0"
longan-nano = "0.3.0"
nb = "0.1"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["riscv"] }
riscv-rt = "0.8.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[dependencies.smart-leds-fx]
path = "../../smart-leds-fx"
version = "0.1.0"

[profile]
[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
