[package]
name = "microbit-v2"
version = "0.1.0"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
description = "Examples of lighting effects for the BBC micro:bit v2"
keywords = ["dotstar", "embedded", "fx", "led", "microbit", "neopixel", "no-std", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"

[dependencies]
cortex-m-rt = "0.6.2"
defmt = "0.2.0"
embedded-time = "0.12.0"
panic-probe = { version = "0.2", features = ["print-rtt"] }
microbit-v2 = "0.11.0"
nb = "0.1"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.smart-leds-fx]
path = "../.."
version = "0.1.0"

[profile]
[profile.dev]
debug = true
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
