[package]
name = "raspberry_pi_pico_example"
version = "0.1.0"
description = "A soft blink effect for the onboard Neopixel on the Raspberry Pi Pico"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
edition = "2021"
keywords = ["dotstar", "embedded", "fx", "led", "neopixel", "no-std", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"
resolver = "2"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-hal = { version = "0.2.7", features=["unproven"] }
fugit = "0.3.7"
libm = "0.2.8"
movavg = { version = "2.3.0", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rp-pico = "0.8.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[dependencies.smart-leds-fx]
path = "../../smart-leds-fx"
version = "0.1.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
